# poetry-auto-incremented-versions

./: .gitignore  CHANGES.rst  Makefile  README.md
.github/workflows/: release.yml
poetry-auto-incremented-versions/: pyproject.toml
scripts/: youtube_video_id.py
