[tool.poetry]
name = "poetry-auto-incremented-versions"
version = "0.1.0"
description = ""
authors = ["GuilhermeVBeira <guilherme.vieira.beira@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_auto_incremented_versions"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry-version-plugin]
source = "git-tag"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
